# data_quality_pydantic

./: pyproject.toml
docs_project/: mkdocs.yml
docs_project/docs/: index.md
tests/: test.py  test_pydantic.py
