[project]
name = "pydantic-data-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings>=0.28.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "taskipy>=1.14.1",
]
